# openshift-kpi-app

./: README.md
backend/app/: .gitignore  README.md  app-config-skeleton.toml  pyproject.toml
backend/app/app/: config.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: kubeburner.py  rhtime.py
backend/app/app/models/: model.py
backend/app/app/services/: rdbms.py
backend/app/scripts/: backend_prestart.py  insert_simdata.py  insert_simdata.sh  simdata.py  start-reload.sh  start.sh
frontend/: .gitignore
frontend/app/: .gitignore  .pnp.cjs  .pnp.loader.mjs  jest.config.js  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
